pa2/cool-parse.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' optional_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'
    6      | error ';'

    7 optional_feature_list: %empty
    8                      | feature optional_feature_list

    9 feature: OBJECTID '(' optional_formals_list ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID '(' ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID ':' TYPEID ';'
   12        | OBJECTID ':' TYPEID ASSIGN expr ';'
   13        | error

   14 formal: OBJECTID ':' TYPEID
   15       | error

   16 optional_formals_list: formal
   17                      | optional_formals_list ',' formal

   18 optional_id_expr_list: expr
   19                      | optional_id_expr_list ',' expr

   20 expr_body_list: expr ';'
   21               | expr ';' expr_body_list
   22               | error

   23 case_arm: OBJECTID ':' TYPEID DARROW expr ';'
   24         | error

   25 case_list: case_arm
   26          | case_arm case_list

   27 let_expr: OBJECTID ':' TYPEID IN expr
   28         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   29         | error

   30 multi_let: let_expr
   31          | OBJECTID ':' TYPEID ',' multi_let
   32          | OBJECTID ':' TYPEID ASSIGN expr ',' multi_let
   33          | error multi_let

   34 expr: OBJECTID ASSIGN expr
   35     | BOOL_CONST
   36     | INT_CONST
   37     | STR_CONST
   38     | expr '+' expr
   39     | expr '-' expr
   40     | expr '*' expr
   41     | expr '/' expr
   42     | expr '<' expr
   43     | expr LE expr
   44     | expr '=' expr
   45     | NOT expr
   46     | '~' expr
   47     | NEW TYPEID
   48     | ISVOID expr
   49     | OBJECTID
   50     | '(' expr ')'
   51     | WHILE expr LOOP expr POOL
   52     | IF expr THEN expr ELSE expr FI
   53     | OBJECTID '(' optional_id_expr_list ')'
   54     | OBJECTID '(' ')'
   55     | expr '@' TYPEID '.' OBJECTID '(' optional_id_expr_list ')'
   56     | expr '@' TYPEID '.' OBJECTID '(' ')'
   57     | expr '.' OBJECTID '(' optional_id_expr_list ')'
   58     | expr '.' OBJECTID '(' ')'
   59     | '{' expr_body_list '}'
   60     | CASE expr OF case_list ESAC
   61     | LET multi_let
   62     | error


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 9 10 50 53 54 55 56 57 58
    ')' (41) 9 10 50 53 54 55 56 57 58
    '*' (42) 40
    '+' (43) 38
    ',' (44) 17 19 31 32
    '-' (45) 39
    '.' (46) 55 56 57 58
    '/' (47) 41
    ':' (58) 9 10 11 12 14 23 27 28 31 32
    ';' (59) 4 5 6 9 10 11 12 20 21 23
    '<' (60) 42
    '=' (61) 44
    '@' (64) 55 56
    '{' (123) 4 5 9 10 59
    '}' (125) 4 5 9 10 59
    '~' (126) 46
    error (256) 6 13 15 22 24 29 33 62
    CLASS (258) 4 5
    ELSE (259) 52
    FI (260) 52
    IF (261) 52
    IN (262) 27 28
    INHERITS (263) 5
    LET (264) 61
    LOOP (265) 51
    POOL (266) 51
    THEN (267) 52
    WHILE (268) 51
    CASE (269) 60
    ESAC (270) 60
    OF (271) 60
    DARROW (272) 23
    NEW (273) 47
    ISVOID (274) 48
    STR_CONST <symbol> (275) 37
    INT_CONST <symbol> (276) 36
    BOOL_CONST <boolean> (277) 35
    TYPEID <symbol> (278) 4 5 9 10 11 12 14 23 27 28 31 32 47 55 56
    OBJECTID <symbol> (279) 9 10 11 12 14 23 27 28 31 32 34 49 53 54 55 56 57 58
    ASSIGN (280) 12 28 32 34
    NOT (281) 45
    LE (282) 43
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    optional_feature_list <features> (49)
        on left: 7 8
        on right: 4 5 8
    feature <feature> (50)
        on left: 9 10 11 12 13
        on right: 8
    formal <formal> (51)
        on left: 14 15
        on right: 16 17
    optional_formals_list <formals> (52)
        on left: 16 17
        on right: 9 17
    optional_id_expr_list <expressions> (53)
        on left: 18 19
        on right: 19 53 55 57
    expr_body_list <expressions> (54)
        on left: 20 21 22
        on right: 21 59
    case_arm <case_> (55)
        on left: 23 24
        on right: 25 26
    case_list <cases> (56)
        on left: 25 26
        on right: 26 60
    let_expr <expression> (57)
        on left: 27 28 29
        on right: 30
    multi_let <expression> (58)
        on left: 30 31 32 33
        on right: 31 32 33 61
    expr <expression> (59)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 9 10 12 18 19 20 21 23 27 28 32 34 38 39 40 41 42 43 44 45 46 48 50 51 52 55 56 57 58 60


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' optional_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' optional_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' optional_feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 7 (optional_feature_list)

    optional_feature_list  go to state 15
    feature                go to state 16


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' optional_feature_list '}' ';'

    '{'  shift, and go to state 17


State 13

   13 feature: error .

    $default  reduce using rule 13 (feature)


State 14

    9 feature: OBJECTID . '(' optional_formals_list ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID . '(' ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID . ':' TYPEID ';'
   12        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 18
    ':'  shift, and go to state 19


State 15

    4 class: CLASS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 20


State 16

    8 optional_feature_list: feature . optional_feature_list

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 7 (optional_feature_list)

    optional_feature_list  go to state 21
    feature                go to state 16


State 17

    5 class: CLASS TYPEID INHERITS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 7 (optional_feature_list)

    optional_feature_list  go to state 22
    feature                go to state 16


State 18

    9 feature: OBJECTID '(' . optional_formals_list ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID '(' . ')' ':' TYPEID '{' expr '}' ';'

    error     shift, and go to state 23
    OBJECTID  shift, and go to state 24
    ')'       shift, and go to state 25

    formal                 go to state 26
    optional_formals_list  go to state 27


State 19

   11 feature: OBJECTID ':' . TYPEID ';'
   12        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 28


State 20

    4 class: CLASS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 29


State 21

    8 optional_feature_list: feature optional_feature_list .

    $default  reduce using rule 8 (optional_feature_list)


State 22

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 30


State 23

   15 formal: error .

    $default  reduce using rule 15 (formal)


State 24

   14 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


State 25

   10 feature: OBJECTID '(' ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 32


State 26

   16 optional_formals_list: formal .

    $default  reduce using rule 16 (optional_formals_list)


State 27

    9 feature: OBJECTID '(' optional_formals_list . ')' ':' TYPEID '{' expr '}' ';'
   17 optional_formals_list: optional_formals_list . ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


State 28

   11 feature: OBJECTID ':' TYPEID . ';'
   12        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 35
    ';'     shift, and go to state 36


State 29

    4 class: CLASS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 37


State 31

   14 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


State 32

   10 feature: OBJECTID '(' ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 39


State 33

    9 feature: OBJECTID '(' optional_formals_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 40


State 34

   17 optional_formals_list: optional_formals_list ',' . formal

    error     shift, and go to state 23
    OBJECTID  shift, and go to state 24

    formal  go to state 41


State 35

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 57


State 36

   11 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 11 (feature)


State 37

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 38

   14 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 14 (formal)


State 39

   10 feature: OBJECTID '(' ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 58


State 40

    9 feature: OBJECTID '(' optional_formals_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 59


State 41

   17 optional_formals_list: optional_formals_list ',' formal .

    $default  reduce using rule 17 (optional_formals_list)


State 42

   62 expr: error .

    $default  reduce using rule 62 (expr)


State 43

   52 expr: IF . expr THEN expr ELSE expr FI

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 60


State 44

   61 expr: LET . multi_let

    error     shift, and go to state 61
    OBJECTID  shift, and go to state 62

    let_expr   go to state 63
    multi_let  go to state 64


State 45

   51 expr: WHILE . expr LOOP expr POOL

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 65


State 46

   60 expr: CASE . expr OF case_list ESAC

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 66


State 47

   47 expr: NEW . TYPEID

    TYPEID  shift, and go to state 67


State 48

   48 expr: ISVOID . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 68


State 49

   37 expr: STR_CONST .

    $default  reduce using rule 37 (expr)


State 50

   36 expr: INT_CONST .

    $default  reduce using rule 36 (expr)


State 51

   35 expr: BOOL_CONST .

    $default  reduce using rule 35 (expr)


State 52

   34 expr: OBJECTID . ASSIGN expr
   49     | OBJECTID .
   53     | OBJECTID . '(' optional_id_expr_list ')'
   54     | OBJECTID . '(' ')'

    ASSIGN  shift, and go to state 69
    '('     shift, and go to state 70

    $default  reduce using rule 49 (expr)


State 53

   45 expr: NOT . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 71


State 54

   46 expr: '~' . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 72


State 55

   59 expr: '{' . expr_body_list '}'

    error       shift, and go to state 73
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr_body_list  go to state 74
    expr            go to state 75


State 56

   50 expr: '(' . expr ')'

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 76


State 57

   12 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   38 expr: expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '<' expr
   43     | expr . LE expr
   44     | expr . '=' expr
   55     | expr . '@' TYPEID '.' OBJECTID '(' optional_id_expr_list ')'
   56     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   57     | expr . '.' OBJECTID '(' optional_id_expr_list ')'
   58     | expr . '.' OBJECTID '(' ')'

    LE   shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79
    '+'  shift, and go to state 80
    '-'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '@'  shift, and go to state 84
    '.'  shift, and go to state 85
    ';'  shift, and go to state 86


State 58

   10 feature: OBJECTID '(' ')' ':' TYPEID '{' . expr '}' ';'

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 87


State 59

    9 feature: OBJECTID '(' optional_formals_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 88


State 60

   38 expr: expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '<' expr
   43     | expr . LE expr
   44     | expr . '=' expr
   52     | IF expr . THEN expr ELSE expr FI
   55     | expr . '@' TYPEID '.' OBJECTID '(' optional_id_expr_list ')'
   56     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   57     | expr . '.' OBJECTID '(' optional_id_expr_list ')'
   58     | expr . '.' OBJECTID '(' ')'

    THEN  shift, and go to state 89
    LE    shift, and go to state 77
    '<'   shift, and go to state 78
    '='   shift, and go to state 79
    '+'   shift, and go to state 80
    '-'   shift, and go to state 81
    '*'   shift, and go to state 82
    '/'   shift, and go to state 83
    '@'   shift, and go to state 84
    '.'   shift, and go to state 85


State 61

   29 let_expr: error .
   33 multi_let: error . multi_let

    error     shift, and go to state 61
    OBJECTID  shift, and go to state 62

    ELSE  reduce using rule 29 (let_expr)
    FI    reduce using rule 29 (let_expr)
    IN    reduce using rule 29 (let_expr)
    LOOP  reduce using rule 29 (let_expr)
    POOL  reduce using rule 29 (let_expr)
    THEN  reduce using rule 29 (let_expr)
    OF    reduce using rule 29 (let_expr)
    LE    reduce using rule 29 (let_expr)
    '<'   reduce using rule 29 (let_expr)
    '='   reduce using rule 29 (let_expr)
    '+'   reduce using rule 29 (let_expr)
    '-'   reduce using rule 29 (let_expr)
    '*'   reduce using rule 29 (let_expr)
    '/'   reduce using rule 29 (let_expr)
    '@'   reduce using rule 29 (let_expr)
    '.'   reduce using rule 29 (let_expr)
    '}'   reduce using rule 29 (let_expr)
    ';'   reduce using rule 29 (let_expr)
    ')'   reduce using rule 29 (let_expr)
    ','   reduce using rule 29 (let_expr)

    let_expr   go to state 63
    multi_let  go to state 90


State 62

   27 let_expr: OBJECTID . ':' TYPEID IN expr
   28         | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   31 multi_let: OBJECTID . ':' TYPEID ',' multi_let
   32          | OBJECTID . ':' TYPEID ASSIGN expr ',' multi_let

    ':'  shift, and go to state 91


State 63

   30 multi_let: let_expr .

    $default  reduce using rule 30 (multi_let)


State 64

   61 expr: LET multi_let .

    $default  reduce using rule 61 (expr)


State 65

   38 expr: expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '<' expr
   43     | expr . LE expr
   44     | expr . '=' expr
   51     | WHILE expr . LOOP expr POOL
   55     | expr . '@' TYPEID '.' OBJECTID '(' optional_id_expr_list ')'
   56     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   57     | expr . '.' OBJECTID '(' optional_id_expr_list ')'
   58     | expr . '.' OBJECTID '(' ')'

    LOOP  shift, and go to state 92
    LE    shift, and go to state 77
    '<'   shift, and go to state 78
    '='   shift, and go to state 79
    '+'   shift, and go to state 80
    '-'   shift, and go to state 81
    '*'   shift, and go to state 82
    '/'   shift, and go to state 83
    '@'   shift, and go to state 84
    '.'   shift, and go to state 85


State 66

   38 expr: expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '<' expr
   43     | expr . LE expr
   44     | expr . '=' expr
   55     | expr . '@' TYPEID '.' OBJECTID '(' optional_id_expr_list ')'
   56     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   57     | expr . '.' OBJECTID '(' optional_id_expr_list ')'
   58     | expr . '.' OBJECTID '(' ')'
   60     | CASE expr . OF case_list ESAC

    OF   shift, and go to state 93
    LE   shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79
    '+'  shift, and go to state 80
    '-'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '@'  shift, and go to state 84
    '.'  shift, and go to state 85


State 67

   47 expr: NEW TYPEID .

    $default  reduce using rule 47 (expr)


State 68

   38 expr: expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '<' expr
   43     | expr . LE expr
   44     | expr . '=' expr
   48     | ISVOID expr .
   55     | expr . '@' TYPEID '.' OBJECTID '(' optional_id_expr_list ')'
   56     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   57     | expr . '.' OBJECTID '(' optional_id_expr_list ')'
   58     | expr . '.' OBJECTID '(' ')'

    '@'  shift, and go to state 84
    '.'  shift, and go to state 85

    $default  reduce using rule 48 (expr)


State 69

   34 expr: OBJECTID ASSIGN . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 94


State 70

   53 expr: OBJECTID '(' . optional_id_expr_list ')'
   54     | OBJECTID '(' . ')'

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56
    ')'         shift, and go to state 95

    optional_id_expr_list  go to state 96
    expr                   go to state 97


State 71

   38 expr: expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '<' expr
   43     | expr . LE expr
   44     | expr . '=' expr
   45     | NOT expr .
   55     | expr . '@' TYPEID '.' OBJECTID '(' optional_id_expr_list ')'
   56     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   57     | expr . '.' OBJECTID '(' optional_id_expr_list ')'
   58     | expr . '.' OBJECTID '(' ')'

    LE   shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79
    '+'  shift, and go to state 80
    '-'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '@'  shift, and go to state 84
    '.'  shift, and go to state 85

    $default  reduce using rule 45 (expr)


State 72

   38 expr: expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '<' expr
   43     | expr . LE expr
   44     | expr . '=' expr
   46     | '~' expr .
   55     | expr . '@' TYPEID '.' OBJECTID '(' optional_id_expr_list ')'
   56     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   57     | expr . '.' OBJECTID '(' optional_id_expr_list ')'
   58     | expr . '.' OBJECTID '(' ')'

    '@'  shift, and go to state 84
    '.'  shift, and go to state 85

    $default  reduce using rule 46 (expr)


State 73

   22 expr_body_list: error .
   62 expr: error .

    '}'       reduce using rule 22 (expr_body_list)
    $default  reduce using rule 62 (expr)


State 74

   59 expr: '{' expr_body_list . '}'

    '}'  shift, and go to state 98


State 75

   20 expr_body_list: expr . ';'
   21               | expr . ';' expr_body_list
   38 expr: expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '<' expr
   43     | expr . LE expr
   44     | expr . '=' expr
   55     | expr . '@' TYPEID '.' OBJECTID '(' optional_id_expr_list ')'
   56     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   57     | expr . '.' OBJECTID '(' optional_id_expr_list ')'
   58     | expr . '.' OBJECTID '(' ')'

    LE   shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79
    '+'  shift, and go to state 80
    '-'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '@'  shift, and go to state 84
    '.'  shift, and go to state 85
    ';'  shift, and go to state 99


State 76

   38 expr: expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '<' expr
   43     | expr . LE expr
   44     | expr . '=' expr
   50     | '(' expr . ')'
   55     | expr . '@' TYPEID '.' OBJECTID '(' optional_id_expr_list ')'
   56     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   57     | expr . '.' OBJECTID '(' optional_id_expr_list ')'
   58     | expr . '.' OBJECTID '(' ')'

    LE   shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79
    '+'  shift, and go to state 80
    '-'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '@'  shift, and go to state 84
    '.'  shift, and go to state 85
    ')'  shift, and go to state 100


State 77

   43 expr: expr LE . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 101


State 78

   42 expr: expr '<' . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 102


State 79

   44 expr: expr '=' . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 103


State 80

   38 expr: expr '+' . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 104


State 81

   39 expr: expr '-' . expr

    error       shift, and go to state 42
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 105


State 82

   40 expr: expr '*' . expr
